@@ -5,6 +5,15 @@
 		label="COM_FINDER_FIELDSET_SEARCH_OPTIONS_LABEL"
 		description="COM_FINDER_FIELDSET_SEARCH_OPTIONS_DESCRIPTION" >
 		<field
+			name="enabled"
+			type="radio"
+			default="0"
+			label="COM_FINDER_CONFIG_GATHER_SEARCH_STATISTICS_LABEL"
+			description="COM_FINDER_CONFIG_GATHER_SEARCH_STATISTICS_DESCRIPTION">
+			<option value="0">JNO</option>
+			<option value="1">JYES</option>
+		</field>
+		<field
 			name="show_description"
 			type="radio"
 			class="btn-group"
