@@ -1,0 +1,26 @@
+<?php
+/**
+ * @package     Joomla.UnitTest
+ * @subpackage  Search
+ *
+ * @copyright   Copyright (C) 2005 - 2012 Open Source Matters, Inc. All rights reserved.
+ * @license     GNU General Public License version 2 or later; see LICENSE
+ */
+
+/**
+ * Test class for JSearchHelper.
+ * Generated by PHPUnit on 2012-08-24 at 22:53:24.
+ */
+class JSearchHelperTest extends PHPUnit_Framework_TestCase
+{
+	/**
+	 * @covers JSearchHelper::logSearch
+	 * @todo   Implement testLogSearch().
+	 */
+	public function testLogSearch()
+	{
+		// Remove the following lines when you implement this test.
+		$this->markTestIncomplete('This test has not been implemented yet.'
+		);
+	}
+}
